# Rehearse

./: .gitignore  HANDOFF.md  README.md  TODOS.md  pyproject.toml
docs/: ASR-evaluation.md  DESIGN-tui-interview.md  DESIGN.md
experiments/: mic_probe.py  mlx_extract_probe.py  mlx_loop_probe.py
localvocal/: __init__.py  asr.py  audio_io.py  coverage.py  duplex.py  embeddings.py  llm_client.py  loop_core.py  main_loop.py  markdown_extractor.py  pipeline.py  practiced_scorer.py  prompt_builder.py  recall_session.py  session_seeder.py  text_sanitize.py  vad.py
rehearse/: __init__.py  _exit.py  anki_loader.py  asr.py  bench_asr.py  coverage.py  embeddings.py  latency.py  llm_client.py  loop_core.py  main_loop.py  markdown_extractor.py  mlx_llm.py  pipeline.py  practice_item.py  practice_store.py  practiced_scorer.py  prompt_builder.py  recall_session.py  sentence_chunker.py  session_seeder.py  stats_report.py  tts.py  unaided.py  vad.py
tests/: test_anki_loader.py  test_audio_io.py  test_audio_roundtrip.py  test_bench_asr.py  test_cli_recall.py  test_coverage.py  test_duplex.py  test_embeddings.py  test_extract_fast.py  test_integration_real.py  test_latency.py  test_llm_client.py  test_loop_core.py  test_main_loop.py  test_markdown_extractor.py  test_menu.py  test_mlx_llm.py  test_pipeline.py  test_practice_item.py  test_practice_store.py  test_practiced_scorer.py  test_prompt_builder.py  test_recall_e2e.py  test_recall_session.py  test_ringbuffer.py  test_sentence_chunker.py  test_session_seeder.py  test_speak_turn.py  test_stats_report.py  test_text_sanitize.py  test_unaided.py  test_vad.py  test_vad_silero.py
tests/fixtures/: deck_richtext.xml  deck_translation.xml
