[project]
name = "rehearse"
version = "0.1.0"
description = "Local, offline, free voice coach for Apple Silicon: practice English conversation and recall any markdown doc from memory, out loud"
requires-python = ">=3.11,<3.14"  # kokoro-onnx / model deps not yet on 3.14
dependencies = ["numpy>=1.26"]

[project.scripts]
rehearse = "rehearse.main_loop:main"
rehearse-bench-asr = "rehearse.bench_asr:main"  # ASR eval tool (not the shipped pipeline)

[project.optional-dependencies]
# Audio runtime (no torch) — install with: uv sync --extra audio
audio = [
    "faster-whisper>=1.0",   # ASR (CPU, int8)
    "mlx-audio>=0.2",        # Kokoro TTS on Apple GPU
    "mlx-lm>=0.31,<0.33",    # local LLM on Apple GPU — one-time markdown extraction (~2.6x Ollama)
    "misaki[en]>=0.7",       # Kokoro English G2P / text processing
    # spaCy English model misaki needs (pin the wheel so it's reproducible/offline,
    # otherwise misaki downloads it at first run and uv sync keeps removing it):
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "soxr>=0.5",             # high-quality resampling 48k<->16k/24k
    "sounddevice>=0.4",      # mic capture + speaker playback (PortAudio)
]
# VAD model pulls torch (heavy) — separate so the audio extra stays light:
#   uv sync --extra audio --extra vad
vad = ["silero-vad>=5"]
# Parakeet ASR — ONLY for the rehearse-bench-asr evaluation tool, NOT the shipped
# pipeline (the live loop still uses faster-whisper on CPU). Install only to run the
# benchmark: uv sync --extra audio --extra parakeet
parakeet = ["parakeet-mlx>=0.2"]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rehearse"]

[tool.hatch.metadata]
allow-direct-references = true  # for the en_core_web_sm wheel URL in audio extra

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
